syntax = "proto3";

option go_package = "/order";

service OrderService {
  rpc Create(CreateOrderRequest) returns (CreateOrderResponse);
}

message MenuItem {
  int64 id = 1;
  string name = 2;
  float price = 3;
}

message Location {
  float latitude = 1;
  float longitude = 2;
}

message User {
  int64 id = 1;
  Location location = 2;
}

message Restaurant {
  int64 id = 1;
  Location location = 2;
}

message CreateOrderRequest {
  Restaurant restaurant = 1;
  User user = 2;
  repeated MenuItem items = 3;
}

message CreateOrderResponse {
  int64 orderId = 1;
  Restaurant restaurant = 2;
  repeated MenuItem items = 3;
  string status = 4;
  User user = 5;
  float totalPrice = 6;
}